--- a/flexbox-layout.html
+++ b/flexbox-layout.html
@@ -113,9 +113,9 @@
 
     <footer>
         <ul>
-            <li>332 Fairhaven Drive</li>
-            <li>Grand Prairie, Texas 75050</li>
-            <li>P 817-797-1210</li>
+            <li>123 Park Way</li>
+            <li>Billy Goat, Texas 76112</li>
+            <li>P 817-999-1010</li>
         </ul>
     </footer>
   </body>
