--- a/flexbox-layout.html
+++ b/flexbox-layout.html
@@ -3,12 +3,14 @@
   <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <link href="css/styles.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <div class="container">
 
         <!-- Primary Navigation -->
+        <button class="menu-icon">Menu</button>
         <nav class="navigation">
             <a href="#">Home</a>
             <a href="#">About</a>
@@ -120,5 +122,7 @@
             <li>P 817-999-1010</li>
         </ul>
     </footer>
+
+  <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
