--- a/flexbox-layout.html
+++ b/flexbox-layout.html
@@ -3,6 +3,7 @@
   <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flexbox Playground</title>
   <link href="css/styles.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
@@ -110,6 +111,21 @@
             <div class="service-item">
                 <h2>Item 3</h2>
                 <p>Some service item copy.</p>
+            </div>
+        </section>
+
+        <!-- Gallery Two -->
+        <section class="galleryTwo">
+            <div class="parent">
+                <div class="child"><div>content</div></div>
+                <div class="child"><div>content</div></div>
+                <div class="child"><div>content</div></div>
+                <div class="child"><div>content</div></div>
+                <div class="child"><div>content</div></div>
+                <div class="child"><div>content</div></div>
+                <div class="child"><div>content</div></div>
+                <div class="child"><div>content</div></div>
+                <div class="child"><div>content</div></div>
             </div>
         </section>
     </div>
