--- a/flexbox-layout.html
+++ b/flexbox-layout.html
@@ -23,7 +23,7 @@
         <!-- Banner -->
         <section class="banner">
             <div class="banner-content">
-                <h2>Some intro text</h2>
+                <h2>Some intro text goes in this feature box</h2>
             </div>
         </section>
 
