--- a/flexbox-layout.html
+++ b/flexbox-layout.html
@@ -13,6 +13,7 @@
         <!-- Primary Navigation -->
         <button class="menu-icon">Menu</button>
         <nav class="navigation">
+            <a href="/" class="logo">Company Logo</a>
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Services</a>
