New gallery section

--- a/flexbox-layout.html
+++ b/flexbox-layout.html
@@ -129,6 +129,17 @@
                 <div class="child"><div>content</div></div>
             </div>
         </section>
+
+        <!-- Another Gallery -->
+        <section class="galleryThree">
+            <div class="galleryThree-content">
+                <div class="galleryThree-item">Uno</div>
+                <div class="galleryThree-item">Dos</div>
+                <div class="galleryThree-item">Tres</div>
+                <div class="galleryThree-item">Cuatro</div>
+                <div class="galleryThree-item">Cinco</div>
+            </div>
+        </section>
     </div>
 
     <footer>
