--- a/flexbox-layout.html
+++ b/flexbox-layout.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flexbox Playground</title>
+  <title>JKJ Marketing | Content that Connects</title>
   <link href="css/styles.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
@@ -13,24 +13,23 @@
         <!-- Primary Navigation -->
         <button class="menu-icon">Menu</button>
         <nav class="navigation">
-            <a href="/" class="logo">Company Logo</a>
+            <a href="/" class="logo">JKJ Marketing</a>
             <a href="#">Home</a>
             <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Portfolio</a>
+            <a href="#">Work</a>
             <a href="#">Contact</a>
         </nav>
 
         <!-- Banner -->
         <section class="banner">
             <div class="banner-content">
-                <h2>Some intro text goes in this feature box</h2>
+                <h2>Content that Connects</h2>
             </div>
         </section>
 
         <!-- Main -->
         <section class="main">
-            <p>Some body copy</p>
+            <p>Content writing and marketing isn’t just about writing well, it’s about learning what your company goals are and how you can stand out among the competition. I can help you tell your unique story through a variety of channels to targeted personas.</p>
         </section>
 
         <!-- News -->
