New Masonry Grid Section

--- a/flexbox-layout.html
+++ b/flexbox-layout.html
@@ -140,6 +140,68 @@
                 <div class="galleryThree-item">Cinco</div>
             </div>
         </section>
+
+        <!-- Masonry -->
+        <section class="masonry">
+            <div class="masonry-grid">
+                <div class="masonry-card-half wide">
+                    <div class="card-img"><span class="label"> <i class="fa fa-star"></i></span><img src="img/fpo1.jpg" alt="img"></div>
+                    <div class="card-text">
+                        <h4>All outdoor &amp; adventure lovers should follow this guy on instagram</h4>
+                        <p>Just take a look at a few of his shots and try not to want this in your feed regularly.</p>
+                    </div>
+                </div>
+                <div class="masonry-card"> 
+                    <img src="img/fpo2.jpg" alt="img">
+                    <div class="info-center">12 Photos Of A Gorgeously Designed NYC Home</div>
+                </div>
+                <div class="masonry-card">
+                    <img src="img/fpo3.jpg" alt="img">
+                    <div class="info-center">Beautiful Yet Simple Warehouse-Inspired Home</div>
+                </div>
+                <div class="masonry-card">
+                    <img src="img/fpo4.jpg" alt="img">
+                    <div class="info-center">Top trends this winter 2016</div>
+                </div>
+                <div class="masonry-card-half wide">
+                    <div class="card-img"><img src="img/fpo5.jpg" alt="img"></div>
+                    <div class="card-text">
+                        <h4>History travel to Spain. Photos stunning country</h4>
+                        <p>Just take a look at a few of his shots and try not to want this in your feed regularly.</p>
+                    </div>
+                </div>
+                <div class="masonry-card-half">
+                    <div class="card-img"><img src="img/fpo1.jpg" alt="img"></div>
+                    <div class="card-text">
+                        <h4>Pre-Match Briefing: Stoke City v Chelsea</h4>
+                        <p>We have a tea-time appointment in the Potteries later today.</p>
+                    </div>
+                </div>
+                <div class="masonry-card"> 
+                    <img src="img/fpo2.jpg" alt="img">
+                    <div class="info-center">Best 100 memorable sports photos</div>
+                </div>
+                <div class="masonry-card">
+                    <img src="img/fpo3.jpg" alt="img">
+                    <div class="info-center">Long shadow is dead. Welcome Diffuse shadows.</div>
+                </div>
+                <div class="masonry-card"> 
+                    <img src="img/fpo4.jpg" alt="img">
+                    <div class="info-center">12 Photos Of A Gorgeously Designed NYC Home</div>
+                </div>
+                <div class="masonry-card">
+                    <img src="img/fpo5.jpg" alt="img">
+                    <div class="info-center">Christina Schneiderlin: Interview with the artist</div>
+                </div>
+                <div class="masonry-card-half">
+                    <div class="card-img"><img src="img/fpo1.jpg" alt="img"></div>
+                    <div class="card-text">
+                        <h4>You just should run</h4>
+                        <p>Learn how to run can improve your health.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <footer>
