--- a/flexbox-layout.html
+++ b/flexbox-layout.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JKJ Marketing | Content that Connects</title>
+  <title>Flexbox</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -14,7 +14,7 @@
         <!-- Primary Navigation -->
         <button class="menu-icon">Menu</button>
         <nav class="navigation">
-            <a href="/" class="logo">JKJ Marketing</a>
+            <a href="/" class="logo">Company Logo</a>
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Work</a>
@@ -24,13 +24,15 @@
         <!-- Banner -->
         <section class="banner">
             <div class="banner-content">
-                <h2>Content that Connects</h2>
+                <h2>Flexbox Header Content</h2>
             </div>
         </section>
 
         <!-- Main -->
         <section class="main">
-            <p>Content writing and marketing isn’t just about writing well, it’s about learning what your company goals are and how you can stand out among the competition. I can help you tell your unique story through a variety of channels to targeted personas.</p>
+            <div class="main-container">
+                <p>Aliquam erat volutpat. Fusce commodo, lectus ac egestas ornare, dui augue sollicitudin risus, ut malesuada lorem risus sit amet quam. Nullam ultricies, ligula fermentum pulvinar rutrum, leo turpis tempor lectus, non vestibulum ex augue eu sem. Phasellus finibus lacus nec pulvinar hendrerit. Vivamus in ullamcorper arcu. Nullam imperdiet mauris sit amet nulla tincidunt, maximus tempor enim vestibulum. Pellentesque volutpat nulla ante, eget blandit odio cursus a. Fusce ac libero gravida, tristique sapien sed, scelerisque neque.</p>
+            </div>
         </section>
 
         <!-- News -->
@@ -202,6 +204,118 @@
                 </div>
             </div>
         </section>
+
+        <!-- Accordion -->
+        <section class="accordion">
+            <div class="accordion-section">
+                <h2>Section 1</h2>
+            </div>
+
+            <div class="accordion-section">
+                <h2>Section 2</h2>
+            </div>
+
+            <div class="accordion-section">
+                <h2>Section 3</h2>
+            </div>
+
+            <div class="accordion-section">
+                <h2>Section 4</h2>
+            </div>
+
+            <div class="accordion-section">
+                <h2>Section 5</h2>
+            </div>
+        </section>
+
+        <!-- Info Cards -->
+
+        <section class="info-cards">
+            <div class="info-cards-item">
+                <div class="info-cards-detail">
+                    <div class="info-cards-image">
+                        <img src="https://placehold.it/500x300&text=%20" />
+                    </div>
+
+                    <div class="info-cards-content">
+                        <h2>First</h2>
+                        <p>I'm a card and I'm first. Quisque commodo hendrerit lorem quis egestas. Maecenas quis tortor arcu. Vivamus rutrum nunc non neque consectetur quis placerat neque.</p>
+                        <a href="#" class="info-cards-button">Button</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="info-cards-item">
+                <div class="info-cards-detail">
+                    <div class="info-cards-image">
+                        <img src="https://placehold.it/500x300&text=%20" />
+                    </div>
+
+                    <div class="info-cards-content">
+                        <h2>Second</h2>
+                        <p>I'm a card and I'm second. Quisque commodo hendrerit lorem quis egestas. Maecenas quis tortor arcu. Vivamus rutrum nunc non neque consectetur quis placerat neque.</p>
+                        <a href="#" class="info-cards-button">Button</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="info-cards-item">
+                <div class="info-cards-detail">
+                    <div class="info-cards-image">
+                        <img src="https://placehold.it/500x300&text=%20" />
+                    </div>
+
+                    <div class="info-cards-content">
+                        <h2>Third</h2>
+                        <p>I'm a card and I'm third. Quisque commodo hendrerit lorem quis egestas. Maecenas quis tortor arcu. Vivamus rutrum nunc non neque consectetur quis placerat neque.</p>
+                        <a href="#" class="info-cards-button">Button</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="info-cards-item">
+                <div class="info-cards-detail">
+                    <div class="info-cards-image">
+                        <img src="https://placehold.it/500x300&text=%20" />
+                    </div>
+
+                    <div class="info-cards-content">
+                        <h2>Fourth</h2>
+                        <p>I'm a card and I'm fourth. Quisque commodo hendrerit lorem quis egestas. Maecenas quis tortor arcu. Vivamus rutrum nunc non neque consectetur quis placerat neque.</p>
+                        <a href="#" class="info-cards-button">Button</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="info-cards-item">
+                <div class="info-cards-detail">
+                    <div class="info-cards-image">
+                        <img src="https://placehold.it/500x300&text=%20" />
+                    </div>
+
+                    <div class="info-cards-content">
+                        <h2>Fifth</h2>
+                        <p>I'm a card and I'm fifth. Quisque commodo hendrerit lorem quis egestas. Maecenas quis tortor arcu. Vivamus rutrum nunc non neque consectetur quis placerat neque.</p>
+                        <a href="#" class="info-cards-button">Button</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="info-cards-item">
+                <div class="info-cards-detail">
+                    <div class="info-cards-image">
+                        <img src="https://placehold.it/500x300&text=%20" />
+                    </div>
+
+                    <div class="info-cards-content">
+                        <h2>Sixth</h2>
+                        <p>I'm a card and I'm sixth. Quisque commodo hendrerit lorem quis egestas. Maecenas quis tortor arcu. Vivamus rutrum nunc non neque consectetur quis placerat neque.</p>
+                        <a href="#" class="info-cards-button">Button</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </div>
 
     <footer>
