Added Contact Section

--- a/flexbox-layout.html
+++ b/flexbox-layout.html
@@ -316,6 +316,16 @@
             </div>
         </section>
 
+        <!-- Contact Us -->
+        <section class="contact">
+            <h2>Contact Us</h2>
+
+            <form action="#">
+                <input id="contact-form" placeholder="Contact" type="text">
+                <button class="button" type="submit">Submit</button>
+            </form>
+        </section>
+
     </div>
 
     <footer>
