Added Grid section

--- a/flexbox-layout.html
+++ b/flexbox-layout.html
@@ -28,6 +28,33 @@
             </div>
         </section>
 
+        <!-- Grid -->
+        <section class="grid">
+            <h2 class="grid-hdr">small</h2>
+            <div class="grid-row">
+                <div class="grid-col-sm-6">left</div>
+                <div class="grid-col-sm-6">right</div>
+            </div>
+            <h2 class="grid-hdr">medium</h2>
+            <div class="grid-row">
+                <div class="grid-col-md-4">left</div>
+                <div class="grid-col-md-4">mid</div>
+                <div class="grid-col-md-4">right</div>
+            </div>
+            <h2 class="grid-hdr">large</h2>
+            <div class="grid-row">
+                <div class="grid-col-lg-4">left</div>
+                <div class="grid-col-lg-4">mid</div>
+                <div class="grid-col-lg-4">right</div>
+            </div>
+            <h2 class="grid-hdr">extra large</h2>
+            <div class="grid-row">
+                <div class="grid-col-xl-4">left</div>
+                <div class="grid-col-xl-4">mid</div>
+                <div class="grid-col-xl-4">right</div>
+            </div>
+        </section>
+
         <!-- Main -->
         <section class="main">
             <div class="main-container">
