New zoom gallery grid section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,84 @@
             </div>
         </section>
 
+        <!-- Zoom Gallery Grid -->
+        <section class="zoom-gallery">
+            <div class="zoom-gallery-content">
+                <a class="zoom-gallery-item" href="#">
+                    <div class="zoom-gallery-item-overlay">
+                        <span class="zoom-gallery-item-lbl">Label</span>
+                    </div>
+                    <img class="is-visible" src="img/bw.jpg" width="294" height="294" alt="BW">
+                </a>
+                <a class="zoom-gallery-item" href="#">
+                    <div class="zoom-gallery-item-overlay">
+                        <span class="zoom-gallery-item-lbl">Label</span>
+                    </div>
+                    <img class="is-visible" src="img/bw.jpg" width="294" height="294" alt="BW">
+                </a>
+                <a class="zoom-gallery-item" href="#">
+                    <div class="zoom-gallery-item-overlay">
+                        <span class="zoom-gallery-item-lbl">Label</span>
+                    </div>
+                    <img class="is-visible" src="img/bw.jpg" width="294" height="294" alt="BW">
+                </a>
+                <a class="zoom-gallery-item" href="#">
+                    <div class="zoom-gallery-item-overlay">
+                        <span class="zoom-gallery-item-lbl">Label</span>
+                    </div>
+                    <img class="is-visible" src="img/bw.jpg" width="294" height="294" alt="BW">
+                </a>
+                <a class="zoom-gallery-item" href="#">
+                    <div class="zoom-gallery-item-overlay">
+                        <span class="zoom-gallery-item-lbl">Label</span>
+                    </div>
+                    <img class="is-visible" src="img/bw.jpg" width="294" height="294" alt="BW">
+                </a>
+                <a class="zoom-gallery-item" href="#">
+                    <div class="zoom-gallery-item-overlay">
+                        <span class="zoom-gallery-item-lbl">Label</span>
+                    </div>
+                    <img class="is-visible" src="img/bw.jpg" width="294" height="294" alt="BW">
+                </a>
+                <a class="zoom-gallery-item" href="#">
+                    <div class="zoom-gallery-item-overlay">
+                        <span class="zoom-gallery-item-lbl">Label</span>
+                    </div>
+                    <img class="is-visible" src="img/bw.jpg" width="294" height="294" alt="BW">
+                </a>
+                <a class="zoom-gallery-item" href="#">
+                    <div class="zoom-gallery-item-overlay">
+                        <span class="zoom-gallery-item-lbl">Label</span>
+                    </div>
+                    <img class="is-visible" src="img/bw.jpg" width="294" height="294" alt="BW">
+                </a>
+                <a class="zoom-gallery-item" href="#">
+                    <div class="zoom-gallery-item-overlay">
+                        <span class="zoom-gallery-item-lbl">Label</span>
+                    </div>
+                    <img class="is-visible" src="img/bw.jpg" width="294" height="294" alt="BW">
+                </a>
+                <a class="zoom-gallery-item" href="#">
+                    <div class="zoom-gallery-item-overlay">
+                        <span class="zoom-gallery-item-lbl">Label</span>
+                    </div>
+                    <img class="is-visible" src="img/bw.jpg" width="294" height="294" alt="BW">
+                </a>
+                <a class="zoom-gallery-item" href="#">
+                    <div class="zoom-gallery-item-overlay">
+                        <span class="zoom-gallery-item-lbl">Label</span>
+                    </div>
+                    <img class="is-visible" src="img/bw.jpg" width="294" height="294" alt="BW">
+                </a>
+                <a class="zoom-gallery-item" href="#">
+                    <div class="zoom-gallery-item-overlay">
+                        <span class="zoom-gallery-item-lbl">Label</span>
+                    </div>
+                    <img class="is-visible" src="img/bw.jpg" width="294" height="294" alt="BW">
+                </a>      
+            </div>
+        </section>
+
         <!-- Main -->
         <section class="main">
             <div class="main-container">
